--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://demo.gethugothemes.com/liva/"
+baseURL = "https:leonardofullana.com.br/"
 disqusShortname = ""
 languageCode = "pt-pt"
 paginate = 6
