--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -5,7 +5,7 @@ defaultContentLanguage = "pt"
 paginate = 6
 summaryLength = "10"
 theme = "liva-hugo"
-title = "Aprenda Product Analytics | Leonardo Fullana"
+title = "Blog Leonardo Fullana | Cultura de produto data-driven"
 [outputs]
 home = ["HTML", "RSS", "JSON"]
 [params]
