--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -13,7 +13,7 @@ author = "Leonardo Fullana"
 copyright = "Copyright &copy; 2021 Leonardo Fullana | Todos os direitos reservados."
 description = "Aprenda Product Analytics com teoria aplicada na prática. Acesse as publicações e evolua seu nível analítico!"
 email = "leonardofullana@gmail.com"
-googleAnalitycsID = "Your ID"
+googleAnalitycsID = "UA-106741649-2"
 home = "Home"
 location = "Brasília, Brasil"
 mobile = "(61) 9 9590-4225"
